--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://localhost"
+baseURL = "http://dreamy-hoover-3f3499.netlify.com/" # set for your environment or localhost/
 languageCode = "en-us"
 title = "Clean Blog Sample"
 theme = "clean-blog"
